--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-		/* border-bottom: dotted 1px; */
+		
 		color: #4eb980;
 		text-decoration: none;
 	}
@@ -2889,7 +2889,7 @@ input, select, textarea {
 		}
 
 			#footer .copyright li {
-				border-left: dotted 1px;
+/* 				
 				display: inline-block;
 				margin-left: 1em;
 				padding-left: 1em;
