--- a/css/main.css
+++ b/css/main.css
@@ -3029,7 +3029,7 @@ input, select, textarea {
 
 			#header {
 				background-attachment: scroll,							scroll,							scroll;
-				background-image: url("images/hd-1600.svg"), url("images/hd.png"), url("../../images/header.jpg");
+				background-image: url("images/hd.jpg"), url("images/hd.jpg"), url("images/hd.jpg");
 				background-size: 1600px 230px,					auto,							cover;
 				padding: 6em 0 6em 0;
 			}
