--- a/css/main.css
+++ b/css/main.css
@@ -2713,7 +2713,7 @@ input, select, textarea {
 
 	#header {
 		background-attachment: scroll,							scroll,					fixed;
-		background-image: url("images/top-3200.svg"), url("hd.jpg"), url("../../images/hd.jpg");
+		background-image: url("images/hd.jpg"), url("images/hd.jpg"), url("images/hd.jpg");
 		background-position: bottom center,					top left,				center center;
 		background-repeat: repeat-x,						repeat,					no-repeat;
 		background-size: 3200px 460px,					auto,					cover;
@@ -3181,7 +3181,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/header.jpg");
+				background-image: url("images/hd-1280.svg"), url("images/hd.jpg"), url("/images/hd.jpg");
 				background-size: 1280px 184px,						auto,							cover;
 				padding: 3em 0 7em 0;
 			}
